# opengl_graphics

./: .gitignore  CMakeLists.txt  configure.ac  declspec.h
include/: CMakeLists.txt
include/opengl_graphics/: CMakeLists.txt
include/opengl_graphics/core/: CMakeLists.txt  memory_leaks.h  platform.h
include/opengl_graphics/mesh_types/: CMakeLists.txt  batch_data.h  batch_traits.h  indices.h  interleaved_data.h  interleaved_traits.h
include/opengl_graphics/mesh_types/datums/: CMakeLists.txt  interleaved_datum_2d.h  interleaved_datum_2d.inl  interleaved_datum_3d.h  interleaved_datum_3d.inl  interleaved_datum_4d.inl  interleaved_datum_5d.inl  interleaved_datum_6d.inl  interleaved_datum_7d.h  interleaved_datum_7d.inl  interleaved_datum_8d.h  interleaved_datum_8d.inl  interleaved_datum_9d.inl
include/opengl_graphics/ref_count/: CMakeLists.txt
include/opengl_graphics/ref_count/intrusive_ptr/: CMakeLists.txt  intrusive_ptr.h  ref_counted_base.h
include/opengl_graphics/ref_count/shared_array/: CMakeLists.txt  shared_array.h  shared_count.h
include/opengl_graphics/ref_count/utils/: CMakeLists.txt  sp_counted_base.h
include/opengl_graphics/type_traits/: CMakeLists.txt  dimension.h  sizeof.h
include/opengl_graphics/utils/: CMakeLists.txt
includes/core/: memory_leaks.h  platform.h
includes/mesh_types/: .batch_data.inl.swp  batch_data.h  batch_data.inl  batch_data.inl.orig  batch_traits.h  indices.h  indices.inl  interleaved_data.h  interleaved_data.inl  interleaved_traits.h
includes/mesh_types/datums/: interleaved_datum_2d.h  interleaved_datum_2d.inl  interleaved_datum_3d.h  interleaved_datum_3d.inl  interleaved_datum_4d.h  interleaved_datum_4d.inl  interleaved_datum_5d.h  interleaved_datum_5d.inl  interleaved_datum_6d.h  interleaved_datum_6d.inl  interleaved_datum_7d.h  interleaved_datum_7d.inl  interleaved_datum_8d.h  interleaved_datum_8d.inl  interleaved_datum_9d.h  interleaved_datum_9d.inl
includes/ref_count/intrusive_ptr/: intrusive_ptr.h  ref_counted_base.h
includes/ref_count/shared_array/: shared_array.h  shared_count.h
includes/ref_count/utils/: non_copyable.h  sp_counted_base.h
includes/type_traits/: dimension.h  sizeof.h
includes/utils/: non_copyable.h  utils.h
lib/: CMakeLists.txt  Makefile.am
mesh_types/: batch_data.h  batch_data.inl  batch_traits.h  interleaved_data.h  interleaved_data.inl  interleaved_traits.h
mesh_types/datums/: .interleaved_datum_6d.h.swp  interleaved_datum_2d.h  interleaved_datum_2d.inl  interleaved_datum_3d.h  interleaved_datum_3d.inl  interleaved_datum_4d.h  interleaved_datum_4d.inl  interleaved_datum_5d.h  interleaved_datum_5d.inl  interleaved_datum_6d.h  interleaved_datum_6d.inl  interleaved_datum_7d.h  interleaved_datum_7d.inl  interleaved_datum_8d.h  interleaved_datum_8d.inl  interleaved_datum_9d.h  interleaved_datum_9d.inl
tests/: .test_mesh_types.cpp.swp  CMakeLists.txt  Makefile.am  check_mesh_types.cpp  check_ref_counted.cpp  main.cpp  suite.cpp  test_base.h  test_mesh_types.cpp  test_mesh_types.h  test_ref_counted.cpp  test_ref_counted.h
tests/.deps/: main.Po
tests/include/: suite.h
tests/mesh_types/: Makefile  Makefile.am  configure.ac  mesh_types.h  mesh_types.vcxproj
type_traits/: dimension.h  sizeof.h
utils/: non_copyable.h  utils.h
